--- a/campaign/templates/campaign/campaign_list/includes/search_area.html
+++ b/campaign/templates/campaign/campaign_list/includes/search_area.html
@@ -1,6 +1,6 @@
 <div class="widget widget-search">
     <h3 class="section-title title-bar-primary">Search Keywords</h3>
-    <form class="input-group stylish-input-group" action="{% url 'blog' %}" method="get">
+    <form class="input-group stylish-input-group" action="{% url 'campaign-list' %}" method="get">
         <input name="search" type="text" class="form-control" placeholder="Search Here . . .">
         <span class="input-group-addon">
             <button type="submit">
