--- a/blog/templates/blog/blog/includes/articles_area.html
+++ b/blog/templates/blog/blog/includes/articles_area.html
@@ -32,6 +32,12 @@
                 </div>
             </div>
         {% endfor %}
+            
     </div>
+
+    {% if not articles %}
+        <p class="display-1 py-5 text-center">Heçbir nəticə tapılmadı :(</p>
+    {% endif %}
+    
     {% include 'general_includes/pagination/pagination.html' with page_obj=page_obj page_list=page_list%}
 </div>
