--- a/campaign/templates/campaign/campaign_detail/includes/detail_area.html
+++ b/campaign/templates/campaign/campaign_detail/includes/detail_area.html
@@ -1,16 +1,19 @@
 <div class="col-xl-6 col-12">
     <div class="single-product-info">
-        <h2 class="item-title">Medical Product Title</h2>
-        <div class="price">59.00 AZN</div>
+        <h2 class="item-title">{{ campaign.title }}</h2>
+        <div class="price">{{ campaign.price | floatformat:2}} AZN</div>
         <div class="item-sku">Tarix:
-            <span>24.08.2021</span> - <span>27.08.2021</span>
+            <span>{{ campaign.date_interval }}</span>
         </div>
         <div class="item-sku">Saat aralığı:
-            <span>09:00</span> - <span>15:00</span>
+            <span>{{ campaign.time_interval }}</span>
         </div>
         <div class="item-stock">Davam Edir:
-            {% comment %} <span style="font-weight: 700; color: green;">BƏLİ</span> {% endcomment %}
-            <span style="font-weight: 700; color: red;">Xeyr</span>
+            {% if campaign.available %}
+                <span style="font-weight: 700; color: green;">BƏLİ</span>
+            {% else %}
+                <span style="font-weight: 700; color: red;">Xeyr</span>
+            {% endif %}
         </div>
         <p>Kampaniyaya qoşulmaq üçün tələsin! Aşağıdakı telefon nömrəsi ilə əlaqə saxlayaraq qeydiyyatdan
         keçə bilərsiz:</p>
