--- a/campaign/templates/campaign/campaign_list/includes/campaigns_area.html
+++ b/campaign/templates/campaign/campaign_list/includes/campaigns_area.html
@@ -1,250 +1,24 @@
 {% load static %}
 
-<div class="col-xl-4 col-lg-6 col-md-4 col-sm-6 col-12">
-    <div class="shop-box-layout1 margin-b-30">
-        <a href="#" class="item-img d-block">
-            <img src="{% static 'general/base/img/shop/shop1.png' %}" alt="shop" class="img-fluid">
-        </a>
-        <div class="item-content">
-            <h4 class="item-title">
-                <a href="single-shop.html">Medical Bottle</a>
-            </h4>
-            <div class="item-price">60.00 AZN</div>
-        </div>
-    </div>
-</div>
-<div class="col-xl-4 col-lg-6 col-md-4 col-sm-6 col-12">
-    <div class="shop-box-layout1 margin-b-30">
-        <div class="item-img">
-            <img src="{% static 'general/base/img/shop/shop2.png' %}" alt="shop" class="img-fluid">
-            <ul class="shop-action-items">
-                <li>
-                    <a href="#">
-                        <i class="flaticon-shopping-cart"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <i class="flaticon-exchange-arrows"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <i class="flaticon-favorite-heart-button"></i>
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <div class="item-content">
-            <h4 class="item-title">
-                <a href="single-shop.html">Medical Bottle</a>
-            </h4>
-            <div class="rate-items">
-                <div class="rate-item">
-                    <i class="fas fa-star"></i>
-                </div>
-                <div class="rate-item">
-                    <i class="fas fa-star"></i>
-                </div>
-                <div class="rate-item">
-                    <i class="fas fa-star"></i>
-                </div>
-                <div class="rate-item">
-                    <i class="fas fa-star"></i>
-                </div>
-                <div class="rate-item">
-                    <i class="fas fa-star"></i>
+<div class="row">
+    {% for campaign in campaign_list %}
+        <div class="col-xl-4 col-lg-6 col-md-4 col-sm-6 col-12">
+            <div class="shop-box-layout1 margin-b-30">
+                <a href="{{ campaign.get_absolute_url }}" class="item-img d-block p-3">
+                    <img src="{{ campaign.first_image.url }}" alt="shop" class="img-fluid"
+                        style="width: 100%; height:215px; object-position: center; object-fit: contain;">
+                </a>
+                <div class="item-content">
+                    <h4 class="item-title">
+                        <a href="{{ campaign.get_absolute_url }}">{{ campaign.title }}</a>
+                    </h4>
+                    <div class="item-price">{{ campaign.price | floatformat:2}} AZN</div>
                 </div>
             </div>
-            <div class="item-price">$60.00</div>
         </div>
-    </div>
+    {% endfor %}
 </div>
-<div class="col-xl-4 col-lg-6 col-md-4 col-sm-6 col-12">
-    <div class="shop-box-layout1 margin-b-30">
-        <div class="item-img">
-            <img src="{% static 'general/base/img/shop/shop3.png' %}" alt="shop" class="img-fluid">
-            <ul class="shop-action-items">
-                <li>
-                    <a href="#">
-                        <i class="flaticon-shopping-cart"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <i class="flaticon-exchange-arrows"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <i class="flaticon-favorite-heart-button"></i>
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <div class="item-content">
-            <h4 class="item-title">
-                <a href="single-shop.html">Medical Bottle</a>
-            </h4>
-            <div class="rate-items">
-                <div class="rate-item">
-                    <i class="fas fa-star"></i>
-                </div>
-                <div class="rate-item">
-                    <i class="fas fa-star"></i>
-                </div>
-                <div class="rate-item">
-                    <i class="fas fa-star"></i>
-                </div>
-                <div class="rate-item">
-                    <i class="fas fa-star"></i>
-                </div>
-                <div class="rate-item">
-                    <i class="fas fa-star"></i>
-                </div>
-            </div>
-            <div class="item-price">$60.00</div>
-        </div>
-    </div>
-</div>
-<div class="col-xl-4 col-lg-6 col-md-4 col-sm-6 col-12">
-    <div class="shop-box-layout1 margin-b-30">
-        <div class="item-img">
-            <img src="{% static 'general/base/img/shop/shop4.png' %}" alt="shop" class="img-fluid">
-            <ul class="shop-action-items">
-                <li>
-                    <a href="#">
-                        <i class="flaticon-shopping-cart"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <i class="flaticon-exchange-arrows"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <i class="flaticon-favorite-heart-button"></i>
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <div class="item-content">
-            <h4 class="item-title">
-                <a href="single-shop.html">Medical Bottle</a>
-            </h4>
-            <div class="rate-items">
-                <div class="rate-item">
-                    <i class="fas fa-star"></i>
-                </div>
-                <div class="rate-item">
-                    <i class="fas fa-star"></i>
-                </div>
-                <div class="rate-item">
-                    <i class="fas fa-star"></i>
-                </div>
-                <div class="rate-item">
-                    <i class="fas fa-star"></i>
-                </div>
-                <div class="rate-item">
-                    <i class="fas fa-star"></i>
-                </div>
-            </div>
-            <div class="item-price">$60.00</div>
-        </div>
-    </div>
-</div>
-<div class="col-xl-4 col-lg-6 col-md-4 col-sm-6 col-12">
-    <div class="shop-box-layout1 margin-b-30">
-        <div class="item-img">
-            <img src="{% static 'general/base/img/shop/shop5.png' %}" alt="shop" class="img-fluid">
-            <ul class="shop-action-items">
-                <li>
-                    <a href="#">
-                        <i class="flaticon-shopping-cart"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <i class="flaticon-exchange-arrows"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <i class="flaticon-favorite-heart-button"></i>
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <div class="item-content">
-            <h4 class="item-title">
-                <a href="single-shop.html">Medical Bottle</a>
-            </h4>
-            <div class="rate-items">
-                <div class="rate-item">
-                    <i class="fas fa-star"></i>
-                </div>
-                <div class="rate-item">
-                    <i class="fas fa-star"></i>
-                </div>
-                <div class="rate-item">
-                    <i class="fas fa-star"></i>
-                </div>
-                <div class="rate-item">
-                    <i class="fas fa-star"></i>
-                </div>
-                <div class="rate-item">
-                    <i class="fas fa-star"></i>
-                </div>
-            </div>
-            <div class="item-price">$60.00</div>
-        </div>
-    </div>
-</div>
-<div class="col-xl-4 col-lg-6 col-md-4 col-sm-6 col-12">
-    <div class="shop-box-layout1 margin-b-30">
-        <div class="item-img">
-            <img src="{% static 'general/base/img/shop/shop2.png' %}" alt="shop" class="img-fluid">
-            <ul class="shop-action-items">
-                <li>
-                    <a href="#">
-                        <i class="flaticon-shopping-cart"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <i class="flaticon-exchange-arrows"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <i class="flaticon-favorite-heart-button"></i>
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <div class="item-content">
-            <h4 class="item-title">
-                <a href="single-shop.html">Medical Bottle</a>
-            </h4>
-            <div class="rate-items">
-                <div class="rate-item">
-                    <i class="fas fa-star"></i>
-                </div>
-                <div class="rate-item">
-                    <i class="fas fa-star"></i>
-                </div>
-                <div class="rate-item">
-                    <i class="fas fa-star"></i>
-                </div>
-                <div class="rate-item">
-                    <i class="fas fa-star"></i>
-                </div>
-                <div class="rate-item">
-                    <i class="fas fa-star"></i>
-                </div>
-            </div>
-            <div class="item-price">$60.00</div>
-        </div>
-    </div>
-</div>
+
+{% if not campaign_list %}
+    <p class="display-1 py-5 text-center">Heçbir nəticə tapılmadı :(</p>
+{% endif %}
