--- a/campaign/templates/campaign/campaign_list/includes/category_area.html
+++ b/campaign/templates/campaign/campaign_list/includes/category_area.html
@@ -1,30 +1,21 @@
 <div class="widget widget-categories">
-    <h3 class="section-title title-bar-primary">Categories</h3>
+    <h3 class="section-title title-bar-primary">Şöbələr</h3>
     <ul>
         <li>
-            <a href="#">Cardiology
-                <span>15</span>
+            <a href="{% url 'campaign-list' %}">Hamısı
+                <span>{{ total_count }}</span>
             </a>
         </li>
-        <li>
-            <a href="#">Dental
-                <span>10</span>
-            </a>
-        </li>
-        <li>
-            <a href="#">Laboratory
-                <span>14</span>
-            </a>
-        </li>
-        <li>
-            <a href="#">Research
-                <span>13</span>
-            </a>
-        </li>
-        <li>
-            <a href="#">Eye
-                <span>19</span>
-            </a>
-        </li>
+        {% for departament in departaments %}
+            
+            {% if departament.campaign_nums %}
+                <li>
+                    <a href="{% url 'campaign-list' %}?departament={{ departament.slug }}">{{ departament.name }}
+                        <span>{{ departament.campaign_nums }}</span>
+                    </a>
+                </li>
+            {% endif %}
+                
+        {% endfor %}
     </ul>
 </div>
