--- a/templates/layouts/main_layout/includes/header.html
+++ b/templates/layouts/main_layout/includes/header.html
@@ -19,7 +19,7 @@
                         <img src="{% static 'general/base/img/logo-light.png' %}" alt="logo" class="img-fluid">
                     </a>
                 </div>
-                <div class="col-lg-7 col-md-7 possition-static">
+                <div class="col-lg-8 col-md-8 possition-static">
                     <div class="template-main-menu">
                         <nav id="dropdown">
                             <ul>
@@ -31,6 +31,9 @@
                                 </li>                           
                                 <li>
                                     <a href="{% url 'doctor-list' %}">Həkimlər</a>
+                                </li>                           
+                                <li>
+                                    <a href="{% url 'campaign-list' %}">Kampaniyalar</a>
                                 </li>                           
                                 <li>
                                     <a href="{% url 'blog' %}">Bloq</a>
@@ -45,7 +48,7 @@
                         </nav>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-3">
+                <div class="col-lg-2 col-md-2">
                     <div class="header-action-items-layout1">
                         <ul>
                             <li>
