--- a/blog/templates/blog/article/article.html
+++ b/blog/templates/blog/article/article.html
@@ -26,7 +26,7 @@
 
 
 {% block body %}
-{% include 'general_includes/banner/banner.html' with adress_string="Əsas Səhifə,Bloq" name=article.title cover_attribute=article.category.cover %}
+{% include 'general_includes/banner/banner.html' with adress_string="Baş Səhifə,Bloq" name=article.title cover_attribute=article.category.cover %}
 <section class="blog-detail-wrap bg-light-primary100">
     <div class="container">
         <div class="row">
