--- a/campaign/templates/campaign/campaign_detail/includes/scripts.html
+++ b/campaign/templates/campaign/campaign_detail/includes/scripts.html
@@ -12,3 +12,5 @@
 <script src="{% static 'general/base/vendor/noUiSlider/nouislider.min.js' %}"></script>
 <!-- wNumb Js -->
 <script src="{% static 'general/base/js/wNumb.js' %}"></script>
+<!-- Share Js -->
+<script src="{% static 'general/base/js/share.js' %}"></script>
