--- a/departament/templates/departament/departament_detail/departament_detail.html
+++ b/departament/templates/departament/departament_detail/departament_detail.html
@@ -28,7 +28,7 @@
 {% endblock links %}
 
 {% block body %}
-{% include 'general_includes/banner/banner.html' with adress_string="Əsas Səhifə,Şöbələr" name=departament.name%}
+{% include 'general_includes/banner/banner.html' with adress_string="Baş Səhifə,Şöbələr" name=departament.name%}
 <!-- Single Department Start Here -->
 <section class="single-department-wrap-layout1 bg-light-primary100">
     <div class="container">
