--- a/departament/templates/departament/departament_detail/includes/schedule_area.html
+++ b/departament/templates/departament/departament_detail/includes/schedule_area.html
@@ -6,49 +6,49 @@
                 {% if schedule.monday_show %}
                     <li>Bazar Ertəsi: <span>{{ schedule.monday_start }} - {{ schedule.monday_end }}</span></li>
                 {% else %}
-                    <li>Bazar Ertəsi: <span class="bold">Will Be Closed</span></li>
+                    <li>Bazar Ertəsi: <span class="bold">İşləmir</span></li>
                 {% endif %}
 
 
                 {% if schedule.tuesday_show %}
                     <li>Çərşənbə Axşamı: <span>{{ schedule.tuesday_start }} - {{ schedule.tuesday_end }}</span></li>
                 {% else %}
-                    <li>Çərşənbə Axşamı: <span class="bold">Will Be Closed</span></li>
+                    <li>Çərşənbə Axşamı: <span class="bold">İşləmir</span></li>
                 {% endif %}
 
 
                 {% if schedule.wednesday_show %}
                     <li>Çərşənbə: <span>{{ schedule.wednesday_start }} - {{ schedule.wednesday_end }}</span></li>
                 {% else %}
-                    <li>Çərşənbə: <span class="bold">Will Be Closed</span></li>
+                    <li>Çərşənbə: <span class="bold">İşləmir</span></li>
                 {% endif %}
 
 
                 {% if schedule.thursday_show %}
                     <li>Cümə Axşamı: <span>{{ schedule.thursday_start }} - {{ schedule.thursday_end }}</span></li>
                 {% else %}
-                    <li>Cümə Axşamı: <span class="bold">Will Be Closed</span></li>
+                    <li>Cümə Axşamı: <span class="bold">İşləmir</span></li>
                 {% endif %}
 
 
                 {% if schedule.friday_show %}
                     <li>Cümə: <span>{{ schedule.friday_start }} - {{ schedule.friday_end }}</span></li>
                 {% else %}
-                    <li>Cümə: <span class="bold">Will Be Closed</span></li>
+                    <li>Cümə: <span class="bold">İşləmir</span></li>
                 {% endif %}
 
 
                 {% if schedule.saturday_show %}
                     <li>Şənbə: <span>{{ schedule.saturday_start }} - {{ schedule.saturday_end }}</span></li>
                 {% else %}
-                    <li>Şənbə: <span class="bold">Will Be Closed</span></li>
+                    <li>Şənbə: <span class="bold">İşləmir</span></li>
                 {% endif %}
 
 
                 {% if schedule.sunday_show %}
                     <li>Bazar: <span>{{ schedule.sunday_start }} - {{ schedule.sunday_end }}</span></li>
                 {% else %}
-                    <li>Bazar: <span class="bold">Will Be Closed</span></li>
+                    <li>Bazar: <span class="bold">İşləmir</span></li>
                 {% endif %}
             </ul>
         </div>
