--- a/doctor/templates/doctor/doctor_detail/doctor_detail.html
+++ b/doctor/templates/doctor/doctor_detail/doctor_detail.html
@@ -29,7 +29,7 @@
 
 
 {% block body %}
-{% include 'general_includes/banner/banner.html' with adress_string="Əsas Səhifə,Həkimlər" name=doctor.name %}
+{% include 'general_includes/banner/banner.html' with adress_string="Baş Səhifə,Həkimlər" name=doctor.name %}
 <!-- Doctors Detail Start Here -->
     <section class="team-details-wrap-layout1 bg-light-accent100">
         <div class="container">
