--- a/doctor/templates/doctor/doctor_list/includes/doctors_area.html
+++ b/doctor/templates/doctor/doctor_list/includes/doctors_area.html
@@ -34,3 +34,7 @@
         </div>
     {% endfor %}
 </div>
+
+{% if not doctors %}
+    <p class="display-1 py-5 text-center">Heçbir nəticə tapılmadı :(</p>
+{% endif %}
