--- a/templates/pages/home/includes/action_area.html
+++ b/templates/pages/home/includes/action_area.html
@@ -2,23 +2,23 @@
 <section class="call-to-action-wrap-layout3">
     <div class="container">
         <div class="row">
-            <div class="col-lg-4 col-12">
+            <div class="col-lg-4 col-12 px-2">
                 <div class="call-to-action-box-layout3">
-                    <div class="single-item">
+                    <div class="single-item mt-2 mt-md-0">
                         <a href="doctors1.html"><i class="flaticon-search"></i> Find Doctors</a>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-12">
+            <div class="col-lg-4 col-12 px-2">
                 <div class="call-to-action-box-layout3">
-                    <div class="single-item">
+                    <div class="single-item mt-2 mt-md-0">
                         <a href="appointment.html"><i class="fas fa-map-marker-alt"></i> Find Locations</a>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-12">
+            <div class="col-lg-4 col-12 px-2">
                 <div class="call-to-action-box-layout3">
-                    <div class="single-item">
+                    <div class="single-item mt-2 mt-md-0">
                         <a href="appointment.html"><i class="far fa-calendar-alt"></i> Request Appoinment</a>
                     </div>
                 </div>
