--- a/blog/templates/blog/blog/blog.html
+++ b/blog/templates/blog/blog/blog.html
@@ -17,7 +17,7 @@
 
 
 {% block body %}
-    {% include 'general_includes/banner/banner.html' with adress_string="Home" name="Blog"%}
+    {% include 'general_includes/banner/banner.html' with adress_string="Baş Səhifə" name="Blog"%}
     <!-- Blog Grid Area Start Here -->
     <section class="blog-wrap-layout2 bg-light-primary100">
         <div class="container">
