--- a/campaign/templates/campaign/campaign_detail/includes/about_area.html
+++ b/campaign/templates/campaign/campaign_detail/includes/about_area.html
@@ -2,7 +2,7 @@
     <div class="col-lg-12 col-md-12 col-sm-12">
         <p class="m-0 text-center text-md-left" style="font-size: 30px; color: black; font-weight: 500;">Ətraflı</p>
         <hr class="w-50 mx-auto mt-md-0 ml-md-0">
-        <div>
+        <div style="color: black;">
             {{ campaign.about | safe }}    
         </div>
     </div>
