--- a/campaign/templates/campaign/campaign_list/campaign_list.html
+++ b/campaign/templates/campaign/campaign_list/campaign_list.html
@@ -1,5 +1,16 @@
 {% extends 'layouts/main_layout/main_layout.html' %}
 
+
+{% block metas %}
+    <meta name="title" content="Sizin üçün ən sərfəli kampaniyalar - Elmed Klinikası">
+    <meta name="description" content="Klinikamızda tətbiq olunan yüksək tibbi texnologiyalar vasitəsilə pasiyentlərin sağlamlığını tam şəkildə qoruyaraq, cəmiyyətimizə ən yaxşı xidməti göstərməyə çalışırıq.">
+{% endblock metas %}
+
+{% block title %}
+    <title>Kampaniyalar - Elmed Klinikası</title>
+{% endblock title %}
+
+
 {% block links %}
     {% include 'campaign/campaign_list/includes/links.html' %}
 {% endblock links %}
