--- a/doctor/templates/doctor/doctor_list/doctor_list.html
+++ b/doctor/templates/doctor/doctor_list/doctor_list.html
@@ -19,7 +19,7 @@
 {% endblock links %}
 
 {% block body %}
-    {% include 'general_includes/banner/banner.html' with adress_string="Əsas Səhifə" name="Həkimlər" %}
+    {% include 'general_includes/banner/banner.html' with adress_string="Baş Səhifə" name="Həkimlər" %}
 
      <!-- All Doctors Start Here -->
         <section class="team-wrap-layout3 bg-light-accent100">
