--- a/templates/pages/contact/contact.html
+++ b/templates/pages/contact/contact.html
@@ -16,7 +16,7 @@
 {% endblock links %}
 
 {% block body %}
-{% include 'general_includes/banner/banner.html' with adress_string="Əsas Səhifə" name="Əlaqə" %}
+{% include 'general_includes/banner/banner.html' with adress_string="Baş Səhifə" name="Əlaqə" %}
 <!-- Contact Us Area Start Here -->
 <section class="contact-wrap-layout">
     <div class="container">
